--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <section class="section" style="padding: 0">
+<!--     <section class="section" style="padding: 0">
         <div class="container is-max-desktop">
             <!-- Abstract. -->
             <div class="columns is-centered has-text-centered">
@@ -56,7 +56,7 @@
                 </video>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="section">
         <div class="container is-max-desktop">
